Improve security, OAuth2 & JWT; add PathTrie
Release prep and feature/security hardening: bump version to 2.2.0 and add/adjust dependencies (favre bcrypt, slf4j, test libs).

Key changes:
- FiberServer: introduce a shared ScheduledExecutorService (virtual-thread backed), ensure instance published after init, graceful shutdown of executors, freeze role registry on start.
- EndpointRegistry: add PathTrie for dynamic route lookup, warn on unprotected endpoints, return immutable endpoint view, log duplicate registrations.
- PathTrie: new O(P) path-segment trie for parameter/wildcard routes.
- JwtUtil: refactor to atomic immutable state, use SecretKey/JwtParser API, add revoked-refresh-token set with revoke/clear helpers, relax IP binding in dev mode, safer claim extraction and logging.
- AuthenticationService/UserFieldUtil: rotate CSRF token on auth changes, revoke refresh tokens on logout, strengthen default password policy and add richer validation API.
- RoleRegistry: add freeze() to prevent role registration after server start and enforce it.
- OAuth2: add PKCE helper (PkceUtil), OAuth2ClientCredentials record, enhance OAuth2ClientService (BCrypt secrets, plaintext secret returned once, PKCE & redirect_uri binding, stronger secrets, scheduled cleanup, shutdown method) and adapt OAuth2AuthenticationService to reuse shared executor when available.
- AbstractOAuth2Provider: re-resolve hosts per-request and validate resolved addresses to guard against DNS rebinding and private addresses.

Also: small API ergonomics (ResponseEntity getters), logging via SLF4J in several places, and a suite of new unit tests to cover BCrypt, PKCE, path trie, rate limiting and other cases.